--- a/style.css
+++ b/style.css
@@ -97,6 +97,69 @@ body {
     transition: .2s all ease-in-out;
 }
 
+/* Global corona info --------------------------------------------------------------------------------------------------- */
+
+#time {
+    text-align: center;
+    background-color: #2c2f31;
+    color: white;
+    margin: 0;
+    padding: 30px;
+}
+
+#globalInfo {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    box-shadow: 0 0 3px black;
+    gap: 1px;
+    background-color: #646464;
+}
+
+#globalInfo > div {
+    height: 17vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #1c1e20;
+}
+
+#globalInfo > div > p {
+    margin: 0;
+    color: #a5a5a5;
+    text-shadow: 0 0 2px black;
+}
+
+#globalInfo > div > h3 {
+    background-color: #282a2c;
+    color: #a5a5a5;
+    padding: 15px;
+    border-radius: 2px;
+    margin: 20px 0 0 0;
+    box-shadow: 0 0 1px black;
+}
+
+@media screen and (max-width: 1100px) {
+    #globalInfo {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    #globalInfo > div {
+        height: 200px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    #globalInfo {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    #globalInfo {
+        grid-template-columns: 1fr;
+    }
+}
+
 /* Input-container --------------------------------------------------------------------------------------------------- */
 
 #inputContainer {
@@ -113,7 +176,7 @@ input {
     position: relative;
     outline: none;
     border: none;
-    padding: 15px;
+    padding: 15px 20px;
     margin: 0;
     border-radius: 1px;
     width: 350px;
