--- a/style.css
+++ b/style.css
@@ -278,18 +278,42 @@ button {
 /* Country Information Generated ------------------------------------------------------------------------------------------ */
 
 #countryInfo {
-    background-color: #eeeeee;
-    padding: 6vw;
+    padding: 100px 6vw;
+    background-color: #16181a;
+    color: #a5a5a5;
 }
 
 #countryInfo > h1 {
-    margin: 20px 0;
-    padding: 20px;
-    background-color: #d8d8d8;
+    max-width: 600px;
+    padding-bottom: 7px;
+    border-bottom: 1px solid #a5a5a5;
+    margin: 0 0 15px 0;
 }
 
-#countryInfo > p {
-    margin: 0 0 10px 0;
-    background-color: #e4e4e4;
-    padding: 20px;
+.table {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 2px;
+    background-color: #7a7a7a;
+    text-align: center;
+    max-width: 600px;
+    box-shadow: 0 0 5px black;
+}
+
+.table > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #131516;
+    padding: 10px;
+}
+
+
+@media screen and (max-width: 700px) {
+    #countryInfo {
+        padding: 60px 40px;
+    }
+    .table {
+        grid-template-columns: 1fr;
+    }
 }
