--- a/style.css
+++ b/style.css
@@ -297,14 +297,15 @@ button {
     background-color: #7a7a7a;
     text-align: center;
     max-width: 600px;
-    box-shadow: 0 0 5px black;
+    box-shadow: 0 0 2px black;
+    margin-bottom: 70px;
 }
 
 .table > div {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #131516;
+    background-color: #101213;
     padding: 10px;
 }
 
