--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ button {
 
 #countryInfo {
     padding: 100px 6vw;
-    background-color: #16181a;
+    background-color: #0f1011;
     color: #a5a5a5;
 }
 
@@ -297,7 +297,7 @@ button {
     background-color: #7a7a7a;
     text-align: center;
     max-width: 600px;
-    box-shadow: 0 0 2px black;
+    box-shadow: 0 0 1px black;
     margin-bottom: 70px;
 }
 
@@ -305,7 +305,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #101213;
+    background-color: #121314;
     padding: 10px;
 }
 
