--- a/style.css
+++ b/style.css
@@ -281,6 +281,39 @@ button {
     height: 27px;
 }
 
+/* If several provinces  ----------------------------------------------------------------------------------------------- */
+
+#provinceChooser {
+    background-color: #18191b;
+    padding: 100px 6vw;
+}
+
+#provinceChooser > h2 {
+    color: #a5a5a5;
+    background-color: #18191b;
+    margin: 0 0 10px 0;
+}
+
+#provinceChooser > div > p {
+    margin: 0;
+    color: #a5a5a5;
+    background-color: #18191b;
+    margin: 10px 0;
+    cursor: pointer;
+    display: inline-block;
+    transition: .3s all ease-in-out;
+}
+
+#provinceChooser > div > p:hover {
+    color: white
+}
+
+@media screen and (max-width: 700px) {
+    #provinceChooser {
+        padding: 60px 40px;
+    }
+}
+
 /* Country Information Generated ------------------------------------------------------------------------------------------ */
 
 #countryInfo {
@@ -289,12 +322,26 @@ button {
     color: #a5a5a5;
 }
 
+#countryInfo > h2 {
+    background-color: grey;
+    color: #0f1011;
+    padding: 20px;
+    text-align: left;
+    margin: 0 0 20px 0;
+    border-radius: 2px;
+    display: inline-block;
+}
+
 #countryInfo > h1 {
+    text-align: left;
+}
+
+/*.provinces > h2 {
     max-width: 600px;
     padding-bottom: 7px;
     border-bottom: 1px solid #a5a5a5;
-    margin: 0 0 15px 0;
-}
+    margin: 0 0 60px 0;
+}*/
 
 .table {
     display: grid;
