--- a/style.css
+++ b/style.css
@@ -323,25 +323,19 @@ button {
 }
 
 #countryInfo > h2 {
-    background-color: grey;
-    color: #0f1011;
+    background-color: #0c0c0e;
+    color: #a5a5a5;
     padding: 20px;
-    text-align: left;
-    margin: 0 0 20px 0;
+    text-align: center;
+    margin: 0 0 50px 0;
     border-radius: 2px;
-    display: inline-block;
+    max-width: 600px;
+    border-bottom: 2px solid #a5a5a5;
 }
 
 #countryInfo > h1 {
     text-align: left;
 }
-
-/*.provinces > h2 {
-    max-width: 600px;
-    padding-bottom: 7px;
-    border-bottom: 1px solid #a5a5a5;
-    margin: 0 0 60px 0;
-}*/
 
 .table {
     display: grid;
