--- a/style.css
+++ b/style.css
@@ -284,20 +284,19 @@ button {
 /* If several provinces  ----------------------------------------------------------------------------------------------- */
 
 #provinceChooser {
-    background-color: #18191b;
+    background-color: #0c0d0e;
     padding: 100px 6vw;
+    border-left: 6px solid #a5a5a5;
 }
 
 #provinceChooser > h2 {
     color: #a5a5a5;
-    background-color: #18191b;
     margin: 0 0 10px 0;
 }
 
 #provinceChooser > div > p {
     margin: 0;
     color: #a5a5a5;
-    background-color: #18191b;
     margin: 10px 0;
     cursor: pointer;
     display: inline-block;
@@ -323,8 +322,9 @@ button {
 }
 
 #countryInfo > h2 {
-    background-color: #0c0c0e;
+    background-color: #0f0f11;
     color: #a5a5a5;
+    box-shadow: 0 0 2px black;
     padding: 20px;
     text-align: center;
     margin: 0 0 50px 0;
@@ -335,6 +335,7 @@ button {
 
 #countryInfo > h1 {
     text-align: left;
+    margin: 20px 0;
 }
 
 .table {
