--- a/style.css
+++ b/style.css
@@ -313,6 +313,39 @@ button {
     }
 }
 
+
+/* If several citites  ----------------------------------------------------------------------------------------------- */
+
+#cityChooser {
+    background-color: #121314;
+    padding: 100px 6vw;
+    border-left: 6px solid #a5a5a5;
+}
+
+#cityChooser > h2 {
+    color: #a5a5a5;
+    margin: 0 0 10px 0;
+}
+
+#cityChooser > div > p {
+    margin: 0;
+    color: #a5a5a5;
+    margin: 10px 0;
+    cursor: pointer;
+    display: inline-block;
+    transition: .3s all ease-in-out;
+}
+
+#cityChooser > div > p:hover {
+    color: white
+}
+
+@media screen and (max-width: 700px) {
+    #cityChooser {
+        padding: 60px 40px;
+    }
+}
+
 /* Country Information Generated ------------------------------------------------------------------------------------------ */
 
 #countryInfo {
